Add more log messages and docs; define messages to be non-empty